# FLUXVortex

./: .gitignore  IDEA_REPORT.md  IDEA_REPORT_EFF.md  NARRATIVE_REPORT.md  PAPER_DRAFT.md  PLAN.md  README.md  _mdpi535.html  discussion_newton.md  pyproject.toml  research_notes_wing_params.md
docs/: aero_modeling_literature.md  discovery_findings.md  elastic_flapping_viz.md  fix_plan.md  flap_validation.md  goland_case4.md  grad_pc_study.md  meta_codesign_policy.pt  meta_policy.pt  newton_2848_draft.md  newton_comparison.md  p0_newton_onboarding.md  p1_differentiability_finding.md  particle_population_control.md  phase0A_findings.md  platform_validation.md  ppo_policy.pt
figures/: flapping_results.npz  flutter_data.npz
flap_arena/: case_battery.py  compare_aligned.py  compare_metrics.py  goland_newtonpc.py  particle_control_study.py  particle_control_summary.py  ptera_baseline.py  render_bird_cfrp.py  render_flap_gif.py  run_flap.py  validate_ptera_platform.py  validate_yamano_platform.py
idea-stage/: IDEA_REPORT.md  architecture_analysis.md  lit_survey_aeroelasticity.md  novelty_check.md  solver_loop_analysis.md
newton_pc/: README.md  __init__.py  case.py  coupler.py  protocols.py
platform/: README.md  _fix_test.py  _prof_accel.py  _prof_tape_graph.py  _v2_chordconv.py  _v2_compare_plot.py  _v2_dbg_3dhist.py  _v2_dbg_3duvlm.py  _v2_dbg_conv.py  _v2_dbg_conv2.py  _v2_dbg_conv3.py  _v2_dbg_conv4.py  _v2_dbg_cyc6.py  _v2_dbg_cycles.py  _v2_dbg_dihedral.py  _v2_dbg_feather.py  _v2_dbg_fine.py  _v2_dbg_kj.py  _v2_dbg_qs.py  _v2_dbg_realaxis.py  _v2_dbg_rk2.py  (+146 more)
(+272 files in other folders)
